<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/disciplineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disciplina"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/roomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sala"
        android:textSize="14sp" />
</LinearLayout>
